# terminal

./: Cargo.toml  README.md  design.txt
src/: constants.rs  lib.rs  preferences.rs  tabbar.rs
src/logic/: mod.rs  run_command.rs  tabbar_obj.rs  terminal_obj.rs
src/objects/: mod.rs  tabbar_obj.rs  terminal_obj.rs
src/terminal/: ansi.rs  line.rs  mod.rs  state.rs  text.rs
